fixed the cards on the dashboard so theyre not covered

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -34,6 +34,7 @@
 .tab-pane {
   height: 68vh;
   overflow: scroll;
+  padding: 8px;
 }
 
 .running-total {
@@ -51,7 +52,9 @@
 }
 
 
-
+.nav {
+  margin-left: 5px;
+}
 
 
 
